course migration update